--- a/.github/workflows/invoke-kagent.yml
+++ b/.github/workflows/invoke-kagent.yml
@@ -2,8 +2,6 @@ name: GioOps semantic validation
 
 on:
   pull_request:
-    types:
-      - opened
 
 jobs:
   invoke-kagent:
@@ -49,10 +47,20 @@ jobs:
           echo "EOF" >> $GITHUB_OUTPUT
 
       - name: Add PR comment
-        run: |
-          gh pr comment $PRNUM --body ${{ steps.kagent.outputs.response }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GH_REPO: ${{ github.repository }}
-          PRNUM: ${{ github.event.pull_request.number }}
+        uses: mshick/add-pr-comment@v2
+        with:
+          message: |
+            **Hello**
+            🌏
+            !
 
+      #  if: env.PR_NUMBER
+      #  uses: peter-evans/create-or-update-comment@v4
+      #  with:
+      #    issue-number: ${{ env.PR_NUMBER }}
+      #    body: |
+      #      🤖 **KAgent Analysis**
+      #      Triggered by: ${{ github.actor }}
+      #      ```
+      #      ${{ steps.kagent.outputs.response }}
+      #      ```
