--- a/.github/workflows/invoke-kagent.yml
+++ b/.github/workflows/invoke-kagent.yml
@@ -43,14 +43,16 @@ jobs:
         run: |
           PROMPT_FILE="./ci-manifest-prompt.txt"
           RESPONSE=$(kagent --kagent-url "http://demo-smart-idp.uk" invoke --agent k8s-agent --file "$PROMPT_FILE" \
-            | jq -r '.result.status.message.parts[0].text // .result.artifacts[0].parts[0].text')
-          echo "response=$RESPONSE" >> $GITHUB_OUTPUT   # set output named 'response'
-      
+          | jq -r '.artifacts[0].parts[0].text')
+          echo "response<<EOF" >> $GITHUB_OUTPUT
+          echo "$RESPONSE" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+
       - name: Add PR comment
         uses: mshick/add-pr-comment@v2
         with:
           message: |
-            Triggered by: KAgent 🤖
+            Triggered by: Kagent 🤖
             ```
-            ${{ steps.kagent.outputs.response }}
+            ${{ steps.kagent.outputs.GITHUB_OUTPUT }}
             ```
