--- a/.github/workflows/invoke-kagent.yml
+++ b/.github/workflows/invoke-kagent.yml
@@ -44,9 +44,7 @@ jobs:
           PROMPT_FILE="./ci-manifest-prompt.txt"
           RESPONSE=$(kagent --kagent-url "http://demo-smart-idp.uk" invoke --agent k8s-agent --file "$PROMPT_FILE" \
           | jq -r '.artifacts[0].parts[0].text')
-          echo "response<<EOF" >> $GITHUB_OUTPUT
-          echo "$RESPONSE" >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
+          echo "response=$RESPONSE" >> $GITHUB_OUTPUT
 
       - name: Add PR comment
         uses: mshick/add-pr-comment@v2
@@ -54,5 +52,5 @@ jobs:
           message: |
             Triggered by: Kagent 🤖
             ```
-            ${{ steps.kagent.outputs.GITHUB_OUTPUT }}
+            ${{ steps.kagent.outputs.response }}
             ```
