--- a/.github/workflows/invoke-kagent.yml
+++ b/.github/workflows/invoke-kagent.yml
@@ -24,6 +24,7 @@ jobs:
             git push origin HEAD:${{ github.ref_name }}
           else
             echo "No changes to commit."
+            exit 1
           fi
 
       - name: Install KAgent
