--- a/.github/workflows/invoke-kagent.yml
+++ b/.github/workflows/invoke-kagent.yml
@@ -22,34 +22,23 @@ jobs:
           if ! git diff --cached --quiet; then
             git commit -m "chore: auto-update manifests [ci skip]"
             git push origin HEAD:${{ github.ref_name }}
+
+            curl -fsSL https://raw.githubusercontent.com/kagent-dev/kagent/main/scripts/get-kagent | bash
+            PROMPT_FILE="./ci-manifest-prompt.txt"
+            {
+              echo "Compare the live state of the cluster with the following manifest. Briefly summarize any misconfigurations or risks that would occur if the manifest is applied. Focus only on real diffs that affect resources, and give very short answers:"
+              cat demo-cluster/.k8s-gen/manifests.yaml
+            } > "$PROMPT_FILE"
+            
+            RESPONSE=$(kagent --kagent-url "http://demo-smart-idp.uk" invoke --agent k8s-agent --file "$PROMPT_FILE" \
+            | jq -r '.artifacts[0].parts[0].text')
+
           else
             echo "No changes to commit."
-            exit 78
           fi
 
-      - name: Install KAgent
-        run: |
-          curl -fsSL https://raw.githubusercontent.com/kagent-dev/kagent/main/scripts/get-kagent | bash
-
-      - name: Build prompt file
-        run: |
-          PROMPT_FILE="./ci-manifest-prompt.txt"
-          {
-            echo "Compare the live state of the cluster with the following manifest. Briefly summarize any misconfigurations or risks that would occur if the manifest is applied. Focus only on real diffs that affect resources, and give very short answers:"
-            cat demo-cluster/.k8s-gen/manifests.yaml
-          } > "$PROMPT_FILE"
-
-      - name: Invoke KAgent
-        id: kagent
-        run: |
-          PROMPT_FILE="./ci-manifest-prompt.txt"
-          RESPONSE=$(kagent --kagent-url "http://demo-smart-idp.uk" invoke --agent k8s-agent --file "$PROMPT_FILE" \
-          | jq -r '.artifacts[0].parts[0].text')
-          echo "response<<EOF" >> $GITHUB_OUTPUT
-          echo "$RESPONSE" >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
-
       - name: Add PR comment
+        if: ${{ steps.generate.outputs.response }}
         uses: mshick/add-pr-comment@v2
         with:
           message: |
@@ -57,3 +46,25 @@ jobs:
             ```
             ${{ steps.kagent.outputs.response }}
             ```
+#
+#      - name: Install KAgent
+#        run: |
+#          curl -fsSL https://raw.githubusercontent.com/kagent-dev/kagent/main/scripts/get-kagent | bash
+#
+#      - name: Build prompt file
+#        run: |
+#          PROMPT_FILE="./ci-manifest-prompt.txt"
+#          {
+#            echo "Compare the live state of the cluster with the following manifest. Briefly summarize any misconfigurations or risks that would occur if the manifest is applied. Focus only on real diffs that affect resources, and give very short answers:"
+#            cat demo-cluster/.k8s-gen/manifests.yaml
+#          } > "$PROMPT_FILE"
+#
+#      - name: Invoke KAgent
+#        id: kagent
+#        run: |
+#          PROMPT_FILE="./ci-manifest-prompt.txt"
+#          RESPONSE=$(kagent --kagent-url "http://demo-smart-idp.uk" invoke --agent k8s-agent --file "$PROMPT_FILE" \
+#          | jq -r '.artifacts[0].parts[0].text')
+#          echo "response<<EOF" >> $GITHUB_OUTPUT
+#          echo "$RESPONSE" >> $GITHUB_OUTPUT
+#          echo "EOF" >> $GITHUB_OUTPUT
