remove kverno ns

--- a/.github/workflows/invoke-kagent.yml
+++ b/.github/workflows/invoke-kagent.yml
@@ -21,17 +21,12 @@ jobs:
           cd ..
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-      
-          # Use token authentication
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
-      
-          # Checkout PR branch to avoid detached HEAD
-          git checkout ${{ github.head_ref }}
-          
+
           git add ./demo-cluster/.k8s-gen/
           if ! git diff --cached --quiet; then
             git commit -m "chore: auto-update manifests [ci skip]"
-            git push origin HEAD:${{ github.ref_name }}
+            git push origin ${{ github.head_ref }}
 
             curl -fsSL https://raw.githubusercontent.com/kagent-dev/kagent/main/scripts/get-kagent | bash
             PROMPT_FILE="./ci-manifest-prompt.txt"
