--- a/.github/workflows/invoke-kagent.yml
+++ b/.github/workflows/invoke-kagent.yml
@@ -14,27 +14,27 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Generate Manifests
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-
-          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
-
-          git fetch origin ${{ github.head_ref }} 
-          git checkout -B ${{ github.head_ref }} origin/${{ github.head_ref }}
-
-          cd demo-cluster
-          make || exit 1
-          cd ..
-
-          git add ./demo-cluster/.k8s-gen/
-          if ! git diff --cached --quiet; then
-            git commit -m "chore: auto-update manifests [ci skip]"
-            git push origin ${{ github.head_ref }} -o ci.skip
-          else
-            echo "No changes to commit."
-          fi
+      #- name: Generate Manifests
+      #  run: |
+      #    git config user.name "github-actions[bot]"
+      #    git config user.email "github-actions[bot]@users.noreply.github.com"
+#
+      #    git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
+#
+      #    git fetch origin ${{ github.head_ref }} 
+      #    git checkout -B ${{ github.head_ref }} origin/${{ github.head_ref }}
+#
+      #    cd demo-cluster
+      #    make || exit 1
+      #    cd ..
+#
+      #    git add ./demo-cluster/.k8s-gen/
+      #    if ! git diff --cached --quiet; then
+      #      git commit -m "chore: auto-update manifests [ci skip]"
+      #      git push origin ${{ github.head_ref }} -o ci.skip
+      #    else
+      #      echo "No changes to commit."
+      #    fi
 
       - name: Install KAgent
         run: |
