--- a/demo-cluster/team-platform/namespaces.yaml
+++ b/demo-cluster/team-platform/namespaces.yaml
@@ -5,6 +5,6 @@ namespaces:
   kagent:
     owner: platform
     project: platform
-  #kmcp-system:
-  #  owner: platform
-  #  project: platform
+  kmcp-system:
+    owner: platform
+    project: platform
