--- a/demo-cluster/.k8s-gen/manifests.yaml
+++ b/demo-cluster/.k8s-gen/manifests.yaml
@@ -156,3 +156,15 @@ spec:
         {{- end }}
     {{- end }}
     {{- end }}
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: nginx
+  namespace: demo-kubecon
+spec:
+  containers:
+  - name: nginx
+    image: nginx:1.14.2
+    ports:
+    - containerPort: 80
