enable cilium agents

--- a/demo-cluster/.k8s-gen/manifests.yaml
+++ b/demo-cluster/.k8s-gen/manifests.yaml
@@ -11,6 +11,12 @@ kind: Namespace
 metadata:
   name: kagent
 ---
+# Source: gitops-chart/templates/namespace.yaml
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: kmcp-system
+---
 # Source: gitops-chart/templates/project.yaml
 apiVersion: argoproj.io/v1alpha1
 kind: AppProject
@@ -156,15 +162,3 @@ spec:
         {{- end }}
     {{- end }}
     {{- end }}
----
-apiVersion: v1
-kind: Pod
-metadata:
-  name: nginx
-  namespace: demo-kubecon
-spec:
-  containers:
-  - name: nginx
-    image: nginx:1.14.2
-    ports:
-    - containerPort: 80
