--- a/demo-cluster/team-platform/values/kagent.yaml
+++ b/demo-cluster/team-platform/values/kagent.yaml
@@ -2,7 +2,7 @@ providers:
   default: openAI
   openAI:
     provider: OpenAI
-    model: "gpt-4o"
+    model: "gpt-4.1-mini"
     apiKeySecretRef: kagent-openai
     apiKeySecretKey: OPENAI_API_KEY
 database:
