--- a/demo-cluster/.k8s-gen/manifests.yaml
+++ b/demo-cluster/.k8s-gen/manifests.yaml
@@ -32,10 +32,13 @@ spec:
       namespace: kagent
     - server: https://kubernetes.default.svc
       namespace: kmcp-system
+    - server: https://kubernetes.default.svc
+      namespace: test-app
   sourceRepos:
     - https://github.com/qasmi/smart-idp.git
     - ghcr.io/kagent-dev/kagent/helm
     - ghcr.io/kagent-dev/kmcp/helm
+    - ghcr.io/stapr-idp
   clusterResourceWhitelist:
     - group: rbac.authorization.k8s.io
       kind: ClusterRoleBinding
@@ -162,16 +165,3 @@ spec:
         {{- end }}
     {{- end }}
     {{- end }}
-
----
-apiVersion: v1
-kind: Pod
-metadata:
-  name: nginx
-  namespace: nonexist
-spec:
-  containers:
-  - name: nginx
-    image: nginx:1.14.2
-    ports:
-    - containerPort: 80
