--- a/demo-cluster/Makefile
+++ b/demo-cluster/Makefile
@@ -22,6 +22,7 @@ generate:
 	cat global.yaml >> $(CONFIG)
 
 	@echo "Rendering Helm template..."
+	cp -rf ./team-*/values $(PATH_DIR)
 	helm template ../gitops-chart --values $(CONFIG) > $(OUTPUT)
 
 	@echo "Manifests generated at $(OUTPUT)"
