--- a/demo-cluster/.k8s-gen/manifests.yaml
+++ b/demo-cluster/.k8s-gen/manifests.yaml
@@ -76,3 +76,89 @@ spec:
       kind: MutatingWebhookConfiguration
     - group: apiregistration.k8s.io
       kind: APIService
+---
+# Source: gitops-chart/templates/applicationSet.yaml
+apiVersion: argoproj.io/v1alpha1
+kind: ApplicationSet
+metadata:
+  annotations: {}
+  name: platform-apps
+  namespace: argocd
+spec:
+  goTemplate: true
+  generators:
+    - git:
+        repoURL: https://github.com/qasmi/smart-idp.git
+        revision: HEAD
+        files:
+          - path: "demo-cluster/team-platform/apps.yaml"
+  template:
+    metadata:
+      name: '{{ .name }}'
+      namespace: argocd
+      annotations:
+        argocd.argoproj.io/sync-wave: '{{ .syncWave | default "10" }}'
+      finalizers:
+        - "resources-finalizer.argocd.argoproj.io"
+    spec:
+      project: '{{ .project }}'
+      revisionHistoryLimit: 3
+      sources:
+      - repoURL: https://github.com/qasmi/smart-idp.git
+        targetRevision: HEAD
+        ref: valuesRef
+      destination:
+        server: https://kubernetes.default.svc
+        namespace: '{{ .namespace }}'
+  templatePatch: |
+    spec:
+      sources:
+        - chart: '{{ .chart }}'
+          repoURL: '{{ .repo }}'
+          targetRevision: '{{ .version }}'
+          helm:
+            valueFiles:
+            {{- range .valueFiles }}
+              - $valuesRef/demo-cluster/team-platform/values/{{ . }}
+            {{- end }}
+        - repoURL: 'https://github.com/qasmi/smart-idp.git'
+          targetRevision: 'HEAD'
+          path: demo-cluster/team-platform/values
+          ref: valuesRef
+    {{- if .autoSync }}
+      syncPolicy:
+        automated:
+          prune: {{ .autoSync.enabled }}
+          selfHeal: {{ .autoSync.enabled }}
+        {{- if .autoSync.syncOptions }}
+        syncOptions:
+        {{- range .autoSync.syncOptions }}
+          - {{ . }}
+        {{- end }}
+        {{- end }}
+    {{- end }}
+    {{- if .ignoreDifferences }}
+      ignoreDifferences:
+    {{- range .ignoreDifferences }}
+      - group: {{ .group }}
+        kind: {{ .kind }}
+        {{- if .name }}
+        name: {{ .name }}
+        {{- end }}
+        {{- if .namespace }}
+        namespace: {{ .namespace }}
+        {{- end }}
+        {{- if .jsonPointers }}
+        jsonPointers:
+        {{- range .jsonPointers }}
+          - {{ . }}
+        {{- end }}
+        {{- end }}
+        {{- if .jqPathExpressions }}
+        jqPathExpressions:
+        {{- range .jqPathExpressions }}
+          - {{ . }}
+        {{- end }}
+        {{- end }}
+    {{- end }}
+    {{- end }}
